@@ -1,6 +1,6 @@
 Package: RcmdrMisc
 Version: 2.7-0
-Date: 2019-11-21
+Date: 2019-12-24
 Title: R Commander Miscellaneous Functions
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
     person("Robert", "Muenchen", role = "ctb"),
